Fix modal not responsive

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -168,7 +168,8 @@ body {
 		padding: 0;
 		img {
 			margin-top: 100px;
-			width: 500px
+			transform: translateX(-70px);
+			width: 500px;
 		}
 	}
 	.collapse-btn {
@@ -418,11 +419,11 @@ body {
 }
 #filename {
     padding: 10px 10px;
-    width: 300px;
+    width: 100%;
 }
 #save-img {
     max-width: 300px;
-    min-width: 300px;
+    min-width: 100%;
     padding: 10px 50px;
     color:rgb(245, 245, 245);
     border: none;
@@ -434,7 +435,7 @@ body {
 }
 #save-pdf {
     max-width: 300px;
-    min-width: 300px;
+    min-width: 100%;
     padding: 10px 50px;
     color:rgb(245, 245, 245);
     border: none;
